--- a/css/simpleGridTemplate.css
+++ b/css/simpleGridTemplate.css
@@ -16,10 +16,15 @@ body {
 	margin-right: 15%;
 	background-color: #FFFFFF;	
 	border-radius: 5px;
-
+	gap: 20px;
+	flex-direction: column; /* Stack elements vertically */
 }
 
-
+.container div {
+            display: block;
+            width: 100%; /* Full width */
+            padding: 10px;
+        }
 
 .container2 {
     width: 100%;
